Added diff.jsf.in. Added improved xml.jsf.in

--- a/jmacsrc.in
+++ b/jmacsrc.in
@@ -195,6 +195,19 @@
  File name with '.'?  It's probably not a text file.
 *.*
 
+ Diff
+*
++--- 
+-syntax diff
+
+*
++*** 
+-syntax diff
+
+*
++\[1-9]\+\[0-9]\[cda]
+-syntax diff
+
  Text file.
 *.txt
 -wordwrap
