--- a/joerc.in
+++ b/joerc.in
@@ -239,6 +239,19 @@
 -wordwrap
 
  News/mail files.
+*.asm
+-wordwrap
+-syntax asm
+
+*.s
+-wordwrap
+-syntax asm
+
+*.S
+-wordwrap
+-syntax asm
+
+ Mason
 *.mas
 -autoindent
 -syntax mason
