aspell support. Added Home, End, Inserst, Delete key sequences.

--- a/configure.ac
+++ b/configure.ac
@@ -4,7 +4,7 @@
 AC_PREREQ(2.54)
 
 #### Here's the only place where to change version number ####
-AC_INIT(joe, 3.0)
+AC_INIT(joe, 3.1)
 AC_CONFIG_SRCDIR([b.c])
 
 AC_CANONICAL_BUILD
@@ -140,6 +140,9 @@ AH_VERBATIM([_PARAMS],[/* Check to see if we can use strict prototypes */
 #    define PARAMS(protos) ()
 #  endif
 #endif])
+
+# Check for programs..
+AC_CHECK_PROG(SPELL,aspell,aspell,ispell)
 
 AC_CONFIG_FILES([Makefile joe.1 joerc jmacsrc jstarrc rjoerc jpicorc
 syntax/c.jsf syntax/perl.jsf syntax/verilog.jsf syntax/sh.jsf syntax/python.jsf
