--- a/jstarrc.in
+++ b/jstarrc.in
@@ -257,6 +257,15 @@
 -wordwrap
 -syntax asm
 
+ TeX
+*.tex
+-wordwrap
+-syntax tex
+
+*.sty
+-wordwrap
+-syntax tex
+
  Text file.
 *.txt
 -wordwrap
