--- a/jpicorc.in
+++ b/jpicorc.in
@@ -690,7 +690,7 @@
 
  Keys:
 
- Use ^@ through ^_ and ^? for Ctrl chars
+ Use ^@ through ^_, ^# and ^? for Ctrl chars
  Use SP for space
  Use a TO b to generate a range of characters
 
@@ -750,9 +750,11 @@ nextw		^[ n
 pgdn		.kN		Screen down
 pgdn		^V
 pgdn		^[ [ 6 ~
+pgdn      ^# S
 pgup		.kP		Screen up
 pgup		^Y
 pgup		^[ [ 5 ~
+pgup      ^# T
 play		^[ 0 TO 9	Execute macro
 prevw		^[ P		Goto previous window
 prevw		^[ ^P
@@ -797,11 +799,13 @@ home			^[ [ 1 ~		Putty, Linux, Cygwin
 home			^[ [ H			Xterm, Konsole, SCO
 home			^[ O H			gnome-terminal
 home			^[ [ 7 ~		RxVT
+home			^# SP A		Amiga
 
 eol			^[ [ 4 ~		Putty, Linux, Cygwin, ssh
 eol			^[ [ F			Xterm, Konsole, SCO
 eol			^[ O F			gnome-terminal
 eol			^[ [ 8 ~		RxVT
+eol			^# SP @		Amiga
 
  ask,query,lose,query,abortbuf	^X	Exit after many questions
 ask,query,exsave	^X		Exit
@@ -832,6 +836,7 @@ dnarw		.kd		Go down
 dnarw		^N
 dnarw		^[ O B
 dnarw		^[ [ B
+dnarw		^# B
 toggle_marking	^^		Marking
 edit		^[ E		Edit a file
 edit		^[ ^E
@@ -869,6 +874,7 @@ ltarw		.kl		Go left
 ltarw		^B
 ltarw		^[ O D
 ltarw		^[ [ D
+ltarw          ^# D
 mode		^[ ^[		Options menu
 nextword	^@		Goto next word
 open		^]		Split line
@@ -884,6 +890,7 @@ rtarw		.kr		Go right
 rtarw		^F
 rtarw		^[ O C
 rtarw		^[ [ C
+rtarw          ^# C
 run		^[ !		Run a program in a window
 stat		^C   		Cursor position status
 blksave		^O		Save file
@@ -901,6 +908,7 @@ uparw		.ku		Go up
 uparw		^P
 uparw		^[ O A
 uparw		^[ [ A
+uparw		^# A
 yank		^U		Paste
 yankpop		^[ U		Select yanked text
 yankpop		^[ ^U
@@ -927,11 +935,13 @@ bolmenu			^[ [ 1 ~		Putty, Linux, Cygwin
 bolmenu			^[ [ H			Xterm, Konsole
 bolmenu			^[ O H			gnome-terminal
 bolmenu			^[ [ 7 ~		RxVT
+bolmenu			^# SP A		Amiga
 
 eolmenu			^[ [ 4 ~		Putty, Linux, Cygwin, ssh
 eolmenu			^[ [ F			Xterm, Konsole
 eolmenu			^[ O F			gnome-terminal
 eolmenu			^[ [ 8 ~		RxVT
+eolmenu			^# SP @		Amiga
 
 abort		^[ ^[
 backsmenu	^?
@@ -945,6 +955,7 @@ dnarwmenu	.kd
 dnarwmenu	^N
 dnarwmenu	^[ [ B
 dnarwmenu	^[ O B
+dnarwmenu ^# B
 eofmenu		^K V
 eofmenu		^K ^V
 eofmenu		^K v
@@ -953,16 +964,20 @@ eolmenu		^E
 ltarwmenu	.kl
 ltarwmenu	^B
 ltarwmenu	^[ [ D
+ltarwmenu ^# D
 ltarwmenu	^[ O D
 pgdnmenu	.kN		Screen down
 pgdnmenu	^V
 pgdnmenu	^[ [ 6 ~
+pgdnmenu  ^# S
 pgupmenu	.kP		Screen up
 pgupmenu	^Y
 pgupmenu	^[ [ 5 ~
+pgupmenu  ^# T
 rtarwmenu	.kr
 rtarwmenu	^F
 rtarwmenu	^[ [ C
+rtarwmenu ^# C
 rtarwmenu	^[ O C
 rtn		SP
 rtn		^I
@@ -973,6 +988,7 @@ tabmenu		^I
 uparwmenu	.ku
 uparwmenu	^P
 uparwmenu	^[ [ A
+uparwmenu ^# A
 uparwmenu	^[ O A
 
 :query			Single-key query window
