--- a/jstarrc.in
+++ b/jstarrc.in
@@ -682,7 +682,7 @@
 
  Keys:
 
- Use ^@ through ^_ and ^? for Ctrl chars
+ Use ^@ through ^_, ^# and ^? for Ctrl chars
  Use SP for space
  Use a TO b to generate a range of characters
 
@@ -744,8 +744,10 @@ nextw		^K ^N
 nextw		^K n
 pgdn		.kN		Screen down
 pgdn		^[ [ 6 ~
+pgdn		^# S
 pgup		.kP		Screen up
 pgup		^[ [ 5 ~
+pgup		^# T
 play		^[ 0 TO 9
 prevw		^K P
 prevw		^K ^P
@@ -793,11 +795,13 @@ home			^[ [ 1 ~		Putty, Linux, Cygwin
 home			^[ [ H			Xterm, Konsole, SCO
 home			^[ O H			gnome-terminal
 home			^[ [ 7 ~		RxVT
+home			^# SP A			Amiga
 
 eol			^[ [ 4 ~		Putty, Linux, Cygwin, ssh
 eol			^[ [ F			Xterm, Konsole, SCO
 eol			^[ O F			gnome-terminal
 eol			^[ [ 8 ~		RxVT
+eol			^# SP @			Amiga
 
 rtarw,prevword,markb,nextword,markk	^K T
 rtarw,prevword,markb,nextword,markk	^K ^T
@@ -890,6 +894,7 @@ dnarw		.kd		Go down
 dnarw		^X
 dnarw		^[ O B
 dnarw		^[ [ B
+dnarw		^# B
 dnslide		^Z
 edit		^K E		Edit a file
 edit		^K ^E
@@ -945,6 +950,7 @@ ltarw		.kl		Go left
 ltarw		^S
 ltarw		^[ O D
 ltarw		^[ [ D
+ltarw		^# D
 markb		^K B		Set beginning of marked block
 markb		^K ^B
 markb		^K b
@@ -970,6 +976,7 @@ rtarw		.kr		Go right
 rtarw		^D
 rtarw		^[ O C
 rtarw		^[ [ C
+rtarw		^# C
 save		^K D		Save file
 save		^K S
 save		^K ^D
@@ -1001,6 +1008,7 @@ uparw		.ku		Go up
 uparw		^E
 uparw		^[ O A
 uparw		^[ [ A
+uparw		^# A
 upslide		^W
 
 :prompt			Prompt windows
@@ -1018,11 +1026,13 @@ bolmenu			^[ [ 1 ~		Putty, Linux, Cygwin
 bolmenu			^[ [ H			Xterm, Konsole
 bolmenu			^[ O H			gnome-terminal
 bolmenu			^[ [ 7 ~		RxVT
+bolmenu			^# SP A			Amiga
 
 eolmenu			^[ [ 4 ~		Putty, Linux, Cygwin, ssh
 eolmenu			^[ [ F			Xterm, Konsole
 eolmenu			^[ O F			gnome-terminal
 eolmenu			^[ [ 8 ~		RxVT
+eolmenu			^# SP @			Amiga
 
 abort		^[ ^[
 backsmenu	^?
@@ -1037,6 +1047,7 @@ bolmenu		^Q s
 dnarwmenu	.kd
 dnarwmenu	^X
 dnarwmenu	^[ [ B
+dnarwmenu	^# B
 dnarwmenu	^[ O B
 eofmenu		^Q C
 eofmenu		^Q ^C
@@ -1048,6 +1059,7 @@ eolmenu		^Q d
 ltarwmenu	.kl
 ltarwmenu	^S
 ltarwmenu	^[ [ D
+ltarwmenu	^# D
 ltarwmenu	^[ O D
 pgdnmenu	.kN		Screen down
 pgdnmenu	^C
@@ -1058,6 +1070,7 @@ pgupmenu	^[ [ 5 ~
 rtarwmenu	.kr
 rtarwmenu	^D
 rtarwmenu	^[ [ C
+rtarwmenu	#^ C
 rtarwmenu	^[ O C
 rtn		SP
 rtn		^I
@@ -1069,6 +1082,7 @@ tabmenu		^I
 uparwmenu	.ku
 uparwmenu	^E
 uparwmenu	^[ [ A
+uparwmenu	^# A
 uparwmenu	^[ O A
 
 :query			Single-key query window
