--- a/rjoerc.in
+++ b/rjoerc.in
@@ -690,7 +690,7 @@
 
  Keys:
 
- Use ^@ through ^_ and ^? for Ctrl chars
+ Use ^@ through ^_, ^# and ^? for Ctrl chars
  Use SP for space
  Use a TO b to generate a range of characters
 
@@ -750,9 +750,11 @@ nextw		^K n
 pgdn		.kN		Screen down
 pgdn		^V
 pgdn		^[ [ 6 ~
+pgdn		^# S
 pgup		.kP		Screen up
 pgup		^U
 pgup		^[ [ 5 ~
+pgup		^# T
 play		^K 0 TO 9	Execute macro
 prevw		^K P		Goto previous window
 prevw		^K ^P
@@ -795,11 +797,13 @@ home			^[ [ 1 ~		Putty, Linux, Cygwin
 home			^[ [ H			Xterm, Konsole, SCO
 home			^[ O H			gnome-terminal
 home			^[ [ 7 ~		RxVT
+home			^# SP A			Amiga
 
 eol			^[ [ 4 ~		Putty, Linux, Cygwin, ssh
 eol			^[ [ F			Xterm, Konsole, SCO
 eol			^[ O F			gnome-terminal
 eol			^[ [ 8 ~		RxVT
+eol			^# SP @			Amiga
 
  Extra functions not really part of JOE user interface:
 
@@ -900,6 +904,7 @@ bol		.kh		Goto beginning of line
 bol		^A
 bol		^[ [ H
 bol		^[ [ 1 ~
+bol		^# SP A
 center		^K A		Center line
 center		^K ^A
 center		^K a
@@ -914,6 +919,7 @@ dnarw		.kd		Go down
 dnarw		^N
 dnarw		^[ O B
 dnarw		^[ [ B
+dnarw		^# B
  edit		^K E		Edit a file
  edit		^K ^E
  edit		^K e
@@ -952,6 +958,7 @@ ltarw		.kl		Go left
 ltarw		^B
 ltarw		^[ O D
 ltarw		^[ [ D
+ltarw		^# D
 macros		^[ d		Dump keyboard macros
 macros		^[ ^D
 markb		^K B		Set beginning of marked block
@@ -972,6 +979,7 @@ rtarw		.kr		Go right
 rtarw		^F
 rtarw		^[ O C
 rtarw		^[ [ C
+rtarw		^# C
 ask		^K D		Save file- no prompt
 ask		^K S
 ask		^K ^D
@@ -999,6 +1007,7 @@ uparw		.ku		Go up
 uparw		^P
 uparw		^[ O A
 uparw		^[ [ A
+uparw		^# A
 
 :prompt			Prompt windows
 :inherit main
@@ -1015,11 +1024,13 @@ bolmenu			^[ [ 1 ~		Putty, Linux, Cygwin
 bolmenu			^[ [ H			Xterm, Konsole
 bolmenu			^[ O H			gnome-terminal
 bolmenu			^[ [ 7 ~		RxVT
+bolmenu			^# SP A			Amiga
 
 eolmenu			^[ [ 4 ~		Putty, Linux, Cygwin, ssh
 eolmenu			^[ [ F			Xterm, Konsole
 eolmenu			^[ O F			gnome-terminal
 eolmenu			^[ [ 8 ~		RxVT
+eolmenu			^# SP @			Amiga
 
 abort		^[ ^[
 backsmenu	^?
@@ -1032,6 +1043,7 @@ bolmenu		^A
 dnarwmenu	.kd
 dnarwmenu	^N
 dnarwmenu	^[ [ B
+dnarwmenu	^# B
 dnarwmenu	^[ O B
 eofmenu		^K V
 eofmenu		^K ^V
@@ -1041,16 +1053,20 @@ eolmenu		^E
 ltarwmenu	.kl
 ltarwmenu	^B
 ltarwmenu	^[ [ D
+ltarwmenu	^# D
 ltarwmenu	^[ O D
 pgdnmenu	.kN		Screen down
 pgdnmenu	^V
 pgdnmenu	^[ [ 6 ~
+pgdnmenu	^# S
 pgupmenu	.kP		Screen up
 pgupmenu	^U
 pgupmenu	^[ [ 5 ~
+pgupmenu	^# T
 rtarwmenu	.kr
 rtarwmenu	^F
 rtarwmenu	^[ [ C
+rtarwmenu	^# C
 rtarwmenu	^[ O C
 rtn		SP
 rtn		^I
@@ -1061,6 +1077,7 @@ tabmenu		^I
 uparwmenu	.ku
 uparwmenu	^P
 uparwmenu	^[ [ A
+uparwmenu	^# A
 uparwmenu	^[ O A
 
 :query			Single-key query window
