Thu Jul  8 2004  Joe Allen <jhallen@world.std.com>
	Merge last two changes (described below...)


Tue Jul  6 2004  Pavel Fedin <sonimiga@rambler.ru>

     Changed some fork()s to vfork()s.
	Added ^# (CSI = 0x9B) control character.
	Added Amiga CSI sequences to keys definitions in joerc files.
	Added some #ifdef's to compile properly on AmigaOS.

Tue Jun 22 2004  Joe Allen <jhallen@world.std.com>

	~/.joe_state file.

	Saves macros, yanks records, and file name history in a file.

--- a/joerc.in
+++ b/joerc.in
@@ -88,6 +88,8 @@
 
  -autoswap	Swap markb with markk when necessary
 
+ -joe_state     Use ~/.joe_state file
+
  -rmsg defines the right-justified string.  The first character of -rmsg is
  the background fill character.  The following escape sequences can be used
  in these strings:
