The last brace commit was bogus due to me running an old version of JOE

--- a/syntax/c.jsf.in
+++ b/syntax/c.jsf.in
@@ -189,7 +189,7 @@ done
 	",:;=()><[]*&|!~+\-%^"	control		recolor=-1
 
 :brace Brace
-	*	idle	noeat		recolor=-1
+	*	idle	noeat
 
 :control Control
 	*	idle	noeat
